Sync Makefile.mac with main one

--- a/Makefile.mac
+++ b/Makefile.mac
@@ -54,6 +54,7 @@ radio_dialog.c\
 receiver_dialog.c\
 transmitter_dialog.c\
 pa_dialog.c\
+eer_dialog.c\
 wideband_dialog.c\
 about_dialog.c\
 button_text.c\
@@ -102,6 +103,7 @@ radio_dialog.h\
 receiver_dialog.h\
 transmitter_dialog.h\
 pa_dialog.h\
+eer_dialog.h\
 wideband_dialog.h\
 about_dialog.h\
 button_text.h\
@@ -149,6 +151,7 @@ radio_dialog.o\
 receiver_dialog.o\
 transmitter_dialog.o\
 pa_dialog.o\
+eer_dialog.o\
 wideband_dialog.o\
 about_dialog.o\
 button_text.o\
