--- a/Makefile.mac
+++ b/Makefile.mac
@@ -15,6 +15,7 @@ AUDIO_LIBS=-lpulse-simple -lpulse -lpulse-mainloop-glib
 # uncomment the line below to include SoapySDR support
 #
 # Note: SoapySDR support has only been tested with the RTL-SDR and LimeSDR
+#       No TX support yet.
 #
 #       If you want to build with SoapySDR support you will need to install:
 #
@@ -38,7 +39,8 @@ soapy_discovery.o \
 soapy_protocol.o
 endif
 
-OPTIONS=-g -Wno-deprecated-declarations -D GIT_DATE='"$(GIT_DATE)"' -D GIT_VERSION='"$(GIT_VERSION)"' $(SOAPYSDR_OPTIONS)
+
+OPTIONS=-Wno-deprecated-declarations -D GIT_DATE='"$(GIT_DATE)"' -D GIT_VERSION='"$(GIT_VERSION)"' $(SOAPYSDR_OPTIONS) -O3
 #OPTIONS=-g -Wno-deprecated-declarations -D GIT_DATE='"$(GIT_DATE)"' -D GIT_VERSION='"$(GIT_VERSION)"' $(SOAPYSDR_OPTIONS) -O3
 #OPTIONS=-g -Wno-deprecated-declarations -D GIT_DATE='"$(GIT_DATE)"' -D GIT_VERSION='"$(GIT_VERSION)"' -O3 -D FT8_MARKER
 
@@ -95,7 +97,8 @@ oc_dialog.c\
 xvtr_dialog.c\
 frequency.c\
 rigctl.c\
-error_handler.c
+error_handler.c\
+bpsk.c
 
 HEADERS=\
 main.h\
@@ -144,7 +147,8 @@ oc_dialog.h\
 xvtr_dialog.h\
 frequency.h\
 rigctl.h\
-error_handler.h
+error_handler.h\
+bpsk.h
 
 OBJS=\
 main.o\
@@ -192,7 +196,8 @@ oc_dialog.o\
 xvtr_dialog.o\
 frequency.o\
 rigctl.o\
-error_handler.o
+error_handler.o\
+bpsk.o
 
 all: prebuild  $(PROGRAM) $(HEADERS) $(SOURCES) $(SOAPYSDR_SOURCES)
 
@@ -212,7 +217,6 @@ clean:
 
 install: $(PROGRAM)
 	cp $(PROGRAM) /usr/local/bin
-	if [ ! -d ~/.local/share/linhpsdr ]; then mkdir ~/.local/share/linhpsdr; fi
 	if [ ! -d /usr/local/share/linhpsdr ]; then mkdir /usr/local/share/linhpsdr; fi
 	cp hpsdr.png /usr/local/share/linhpsdr
 	cp hpsdr_icon.png /usr/local/share/linhpsdr
