added OPENGL includes and libs

--- a/Makefile.mac
+++ b/Makefile.mac
@@ -8,8 +8,10 @@ LINK=gcc
 
 GTKINCLUDES=`pkg-config --cflags gtk+-3.0`
 GTKLIBS=`pkg-config --libs gtk+-3.0`
-#GTKINCLUDES=`pkg-config --cflags gtk+-3.0 epoxy`
-#GTKLIBS=`pkg-config --libs gtk+-3.0 epoxy`
+
+#OPENGL_OPTIONS=-D OPENGL
+#OPENGL_INCLUDES=`pkg-config --cflags epoxy`
+#OPENGL_LIBS=`pkg-config --libs epoxy`
 
 #PULSEINCLUDES=`pkg-config --cflags libpulse`
 #PULSELIBS=`pkg-config --libs libpulse`
@@ -51,7 +53,7 @@ endif
 OPTIONS=-Wno-deprecated-declarations -D SOUNDIO -D GIT_DATE='"$(GIT_DATE)"' -D GIT_VERSION='"$(GIT_VERSION)"' $(SOAPYSDR_OPTIONS) -O3 -g
 
 LIBS=-lm -lpthread -lwdsp
-INCLUDES=$(GTKINCLUDES) $(PULSEINCLUDES)
+INCLUDES=$(GTKINCLUDES) $(PULSEINCLUDES) $(OPENGL_INCLUDES)
 
 COMPILE=$(CC) $(OPTIONS) $(INCLUDES)
 
@@ -211,7 +213,7 @@ prebuild:
 	rm -f version.o
 
 $(PROGRAM):  $(OBJS) $(SOAPYSDR_OBJS)
-	$(LINK) -o $(PROGRAM) $(OBJS) $(SOAPYSDR_OBJS) $(GTKLIBS) $(LIBS) $(AUDIOLIBS) $(SOAPYSDR_LIBS)
+	$(LINK) -o $(PROGRAM) $(OBJS) $(SOAPYSDR_OBJS) $(GTKLIBS) $(LIBS) $(AUDIOLIBS) $(SOAPYSDR_LIBS) $(OPENGL_LIBS)
 
 .c.o:
 	$(COMPILE) -c -o $@ $<
