Radioberry fix, duplex added
cwdaemon commented in makefile, radioberry support added, duplex mode added. Hermes device included for cwdaemon. Mac makefile corrected for radio_info. Out of band now uses gen filters, rx audio when tx issue fixed.

--- a/Makefile.mac
+++ b/Makefile.mac
@@ -106,6 +106,7 @@ xvtr_dialog.c\
 frequency.c\
 rigctl.c\
 error_handler.c\
+radio_info.c\
 bpsk.c
 
 HEADERS=\
@@ -156,6 +157,7 @@ xvtr_dialog.h\
 frequency.h\
 rigctl.h\
 error_handler.h\
+radio_info.h\
 bpsk.h
 
 OBJS=\
@@ -205,6 +207,7 @@ xvtr_dialog.o\
 frequency.o\
 rigctl.o\
 error_handler.o\
+radio_info.o\
 bpsk.o
 
 all: prebuild  $(PROGRAM) $(HEADERS) $(SOURCES) $(SOAPYSDR_SOURCES)
