--- a/Makefile.mac
+++ b/Makefile.mac
@@ -3,9 +3,6 @@
 GIT_DATE := $(firstword $(shell git --no-pager show --date=short --format="%ai" --name-only))
 GIT_VERSION := $(shell git describe --abbrev=0 --tags)
 
-CC?=gcc
-LINK?=gcc
-
 GTKINCLUDES=`pkg-config --cflags gtk+-3.0`
 GTKLIBS=`pkg-config --libs gtk+-3.0`
 
@@ -61,6 +58,7 @@ PROGRAM=linhpsdr
 
 SOURCES=\
 main.c\
+css.c\
 audio.c\
 version.c\
 discovered.c\
@@ -106,10 +104,12 @@ frequency.c\
 rigctl.c\
 error_handler.c\
 radio_info.c\
-bpsk.c
+bpsk.c\
+subrx.c
 
 HEADERS=\
 main.h\
+css.h\
 audio.h\
 version.h\
 discovered.h\
@@ -156,10 +156,12 @@ frequency.h\
 rigctl.h\
 error_handler.h\
 radio_info.h\
-bpsk.h
+bpsk.h\
+subrx.h
 
 OBJS=\
 main.o\
+css.o\
 audio.o\
 version.o\
 discovered.o\
@@ -205,7 +207,8 @@ frequency.o\
 rigctl.o\
 error_handler.o\
 radio_info.o\
-bpsk.o
+bpsk.o\
+subrx.o
 
 all: prebuild  $(PROGRAM) $(HEADERS) $(SOURCES) $(SOAPYSDR_SOURCES)
 
