--- a/Makefile.mac
+++ b/Makefile.mac
@@ -33,7 +33,7 @@ AUDIOLIBS=-lsoundio
 #	sudo apt-get install soapysdr-module-rtlsdr
 #	sudo apt-get install soapysdr-module-lms7
 #
-SOAPYSDR_INCLUDE=SOAPYSDR
+#SOAPYSDR_INCLUDE=SOAPYSDR
 
 ifeq ($(SOAPYSDR_INCLUDE),SOAPYSDR)
 SOAPYSDR_OPTIONS=-D SOAPYSDR
@@ -106,7 +106,9 @@ frequency.c\
 rigctl.c\
 error_handler.c\
 radio_info.c\
-bpsk.c
+bpsk.c \
+css.c \
+subrx.c
 
 HEADERS=\
 main.h\
@@ -156,7 +158,9 @@ frequency.h\
 rigctl.h\
 error_handler.h\
 radio_info.h\
-bpsk.h
+bpsk.h \
+css.h \
+subrx.h
 
 OBJS=\
 main.o\
@@ -205,7 +209,9 @@ frequency.o\
 rigctl.o\
 error_handler.o\
 radio_info.o\
-bpsk.o
+bpsk.o \
+css.o \
+subrx.o
 
 all: prebuild  $(PROGRAM) $(HEADERS) $(SOURCES) $(SOAPYSDR_SOURCES)
 
